<package format="2">
  <version>1.0.0</version>
  <name>dlf-solution</name>
  <description>DLF solution example for roboforces.ru</description>

  <author     email="roboforces@yandex.ru">Roboforces team</author>
  <maintainer email="roboforces@yandex.ru">Roboforces team</maintainer>

  <license>Apache License, Version 2.0</license>

  <url type="website">https://gitlab.com/beerlab</url>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>hector_uav_msgs</exec_depend>
  <exec_depend>image_transport</exec_depend>


  <export>
  </export>

</package>
